changed url in requests; fixed cards styles - z-index

--- a/src/app/offices/all-offices/all-offices.component.scss
+++ b/src/app/offices/all-offices/all-offices.component.scss
@@ -1,3 +1,7 @@
+nb-card {
+  z-index: 0;
+}
+
 nb-card-header {
   text-align: center;
 }
