--- a/src/app/offices/office-preview/office-preview.component.scss
+++ b/src/app/offices/office-preview/office-preview.component.scss
@@ -6,3 +6,6 @@
   padding: 0;
 }
   
+nb-card {
+  z-index: 0;
+}
