--- a/src/app/packages/all-packages/all-packages.component.scss
+++ b/src/app/packages/all-packages/all-packages.component.scss
@@ -1,3 +1,7 @@
+nb-card {
+  z-index: 0;
+}
+
 nb-card-header {
   display: flex;
   align-items: center;
